<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/addEpisodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_episode_title"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/inputEpisodeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/episode_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/buttonCancelEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_episode"/>

        <Button
            android:id="@+id/buttonSaveEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_episode"/>
    </LinearLayout>

</LinearLayout>
