<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:attr/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:padding="8dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:padding="8dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:padding="8dp"/>
</LinearLayout>
