<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"/>

    <TextView
        android:id="@+id/textType"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"
        android:textColor="?attr/colorOnBackground"/>

    <ImageView
        android:id="@+id/menu_options"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@android:drawable/ic_menu_more"
        android:layout_alignParentEnd="true"
        android:padding="4dp"
        android:contentDescription="@string/menu_options_desc"/>

    <CheckBox
        android:id="@+id/checkWatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:padding="12dp"/>
</LinearLayout>
